# zmluvy

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  EXTRACTION_REFERENCE.md  LICENSE  Makefile  README.md  browse.html  compose.yaml  crz.db  dashboard.html  dashboard.py  detail.html  download_sample_pdfs.py  enrich_suppliers.py  experiment_link_amendments.py  extract_contracts.py  flag_contracts.py  import_debtors.py  import_fs_exports.py  import_ruz_equity.py  load_crz.py  load_tax_reliability.py  main.py  ocr_pdf2txt.py  openrouter_utils.py  pdf_to_text.py  pyproject.toml  requirements.txt  run.py  serve.py  settings.py
agents/: cross-referencer.md  network-mapper.md  phase-gater.md  report-writer.md  supplier-profiler.md
agents/evals/: evals.json
assets/: stopa-os-zmluvy.css
critical-validation-workspace/iteration-1/: benchmark.json
delta_store/: discord_report.py  ingest.py  migrate_from_sqlite.py  r2_sync.py  serve.py
delta_store/tests/: bench_ocr.py  (+5 more)
frontend/: dashboard.html  detail.html
pipeline/: confpath.py  download_sample_pdfs.py  enrich_suppliers.py  experiment_link_amendments.py  extract_contracts.py  flag_contracts.py  import_debtors.py  import_fs_exports.py  import_ruz_equity.py  load_crz.py  load_tax_reliability.py  main.py  openrouter_utils.py  pdf_to_text.py
reports/: investigation_PM_CEE_VC_57316813.md  kloboucka-lesni-deep-investigation.md  md_staving_investigation.md  plan_obnovy_podozrive_zakazky.md  todos-bratislava-deep-investigation.md
server/: metadata.yaml  run.py  serve.py
(+462 files in other folders)
